[package]
authors = ["Stefan O'Rear <stefanor@cox.net>"]
build = "build.rs"
name = "unbase"
version = "0.1.0"

[build-dependencies]
capnpc = "0.6.0"

[dependencies]
argparse = "0.2.1"
byteorder = "0.4.2"
capnp = "0.6.1"
hyper = "0.7.2"
lmdb = "0.5.0"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.0"
time = "0.1.34"
uuid = "0.1.18"
